Make protocol handling dialog appear with protocols that are unknown to the OS if we have handlers (bug 392964), r=myk,biesi; sr=biesi; a=mconnor